# flowmie

./: README.md  package-lock.json  package.json
docs/: README.md
docs/guides/: README.md
docs/specs/features/: F001-agent-orchestration-canvas.md  F002-agent-skills.md  F003-file-nodes.md
mcp-server/: flowmie-mcp.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs
src-tauri/src/files/: mod.rs
src-tauri/src/pty/: manager.rs
src-tauri/src/resources/: mod.rs
src-tauri/src/skills/: bridge.rs  mod.rs
src-tauri/src/webview/: manager.rs  manager_linux.rs  mod.rs
src-tauri/src/workspace/: mod.rs  persistence.rs
src/components/canvas/: Canvas.css  Canvas.tsx  FileNode.css  FileNode.tsx  NoteNode.css  NoteNode.tsx  RelayEdge.css  RelayEdge.tsx  ResourceTray.css  ResourceTray.tsx  TerminalNode.css  TerminalNode.tsx  WebviewNode.css  WebviewNode.tsx
src/components/toolbar/: NewNodeMenu.css  NewNodeMenu.tsx  WorkspaceMenu.css  WorkspaceMenu.tsx
src/hooks/: useFileDrop.ts  usePersistence.ts  usePty.ts  useRelay.ts  useResources.ts  useSkillActivity.ts  useSkillsSync.test.ts  useSkillsSync.ts  useWebviewSync.ts  useWorkspace.ts
src/lib/: fileKind.test.ts  fileKind.ts  sanitize.test.ts  sanitize.ts  webviewBounds.test.ts  webviewBounds.ts
src/types/: pty.ts  workspace.ts
