[package]
name = "flowmie"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowmie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
# Minimal blocking HTTP server for the agent-skills bridge (F002). Sync API,
# no async runtime pulled in — the bridge runs on its own thread.
tiny_http = "0.12"

# Tauri's public add_child API packs child webviews into the window's plain
# vbox on Linux (no absolute positioning support), so positioned canvas
# overlays need to go straight through wry+gtk instead. See
# src/webview/manager_linux.rs.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
wry = "0.55"

