[package]
name = "flowmie"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowmie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
# Minimal blocking HTTP server for the agent-skills bridge (F002). Sync API,
# no async runtime pulled in — the bridge runs on its own thread.
tiny_http = "0.12"
# Content-addressing (F002 Phase 3 resource store) and base64 for inline
# transport of resource blobs to/from agents and the frontend.
sha2 = "0.10"
base64 = "0.22"
tauri-plugin-dialog = "2.7.1"

# Tauri's public add_child API packs child webviews into the window's plain
# vbox on Linux (no absolute positioning support), so positioned canvas
# overlays need to go straight through wry+gtk instead. See
# src/webview/manager_linux.rs.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
wry = "0.55"
# Portal screenshots (F002 Phase 3 capture_webview) call WebKit's async
# get_snapshot on the wry webview widget. Pinned to the exact version wry 0.55
# resolves (=2.0.2, feature v2_38) so the `WebView`/`cairo::Surface` types unify
# with wry's — a mismatched version would not typecheck.
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }
# gtk re-exports cairo but not with the `png` feature that provides
# ImageSurface::write_to_png; enable it here (features unify across the graph).
cairo-rs = { version = "0.18", features = ["png"] }

